<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/alarm_color">

    <RelativeLayout
        android:id="@+id/header"
        style="@style/demo_top_bar"
        android:background="@color/alarm_color">

        <ImageView
            android:id="@+id/alarm_back"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:src="@mipmap/demo_button_back"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_title"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/alarm_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/alarm_image"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/demo_alarm_demo"/>

    <LinearLayout
        android:id="@+id/alarm_check_boxes"
        android:layout_below="@+id/alarm_image"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.helloworld.demogift.views.AlarmCheckBox
            android:id="@+id/alarm_check_box_mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/demo_alarm_check_box"
            android:text="@string/mon"/>

        <com.helloworld.demogift.views.AlarmCheckBox
            android:id="@+id/alarm_check_box_tues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/tues"/>

        <com.helloworld.demogift.views.AlarmCheckBox
            android:id="@+id/alarm_check_box_wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/demo_alarm_check_box"
            android:text="@string/wed"/>

        <com.helloworld.demogift.views.AlarmCheckBox
            android:id="@+id/alarm_check_box_thur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/demo_alarm_check_box"
            android:text="@string/thur"/>

        <com.helloworld.demogift.views.AlarmCheckBox
            android:id="@+id/alarm_check_box_fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/demo_alarm_check_box"
            android:text="@string/fri"/>

        <com.helloworld.demogift.views.AlarmCheckBox
            android:id="@+id/alarm_check_box_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/demo_alarm_check_box"
            android:text="@string/sat"/>

        <com.helloworld.demogift.views.AlarmCheckBox
            android:id="@+id/alarm_check_box_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun"/>

    </LinearLayout>

    <TextView
        android:id="@+id/alarm_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="07:30"
        android:textColor="@color/white"
        android:textSize="80sp"
        android:layout_below="@id/alarm_check_boxes"/>

</RelativeLayout>